--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&family=Roboto:wght@400;700&display=swap');
 
 
 /* reset */
@@ -89,6 +89,24 @@ ul{
     transition: 0.2s ease-out;
 }
 
+
+.primary-button:hover{
+   background-color: var(--accent-color-dark); 
+}
+
+.secondary-button{
+   border:0.5px  solid var(--secondary-text-color);
+   border-radius: 6px;
+   font-weight: 700;
+   color: var(--primary-text-color) !important;
+   padding: 12px 24px;
+   transition: 0.2s ease-out;
+}
+
+.secondary-button:hover{
+    border-color:var(--accent-color);
+    color:var(--accent-color) !important;
+}
 /* top banner */
 
 .top-banner{
@@ -121,3 +139,96 @@ ul{
   gap: 40px;
 }
 
+
+/* header section */
+
+.header{
+    padding: 50px var(--padding-inline-section) 0;
+}
+
+.header-section{
+    justify-content: center;
+    gap: 50px;
+}
+
+.header-left{
+    max-width: 40vw;
+}
+
+.header-left h1{
+    margin-top: 20px;
+}
+
+.get-started-btn{
+   margin-top:15px;
+}
+
+.header-right img{
+    width: 600px;
+}
+
+
+/* companies-section */
+
+.companies-header{
+   text-align: center;
+   margin-block:30px ;
+   color: var(--primary-text-color);
+}
+
+.logos{
+   justify-content: space-between;
+   flex-wrap: wrap;
+}
+
+.logo{
+   height: 46px
+}
+
+.features-section{
+    padding: 80px var(--padding-inline-section) 0;
+    background-image: url(https://assets-global.website-files.com/5af97a9c84ec1bc79d81b5f4/5af98b9f779b5a7d0a80351e_Oval%201.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.features-header{
+    text-align: center;
+}
+
+.features-header h2{
+    margin-bottom: 20px;
+}
+
+.features-area{
+   flex-wrap: wrap;
+   justify-content: space-between;
+   gap: 40px;
+   margin-top:20px;
+}
+
+.features-card{
+    flex-direction: column;
+    gap:20px;
+    max-width: 30%;
+    text-align: center;
+}
+
+.big-feature-section{
+    padding: 30px var(--padding-inline-section) 0;
+}
+
+.big-feature-container{
+    gap:30px;
+}
+
+.feature-img img{
+    width: 100%;
+}
+
+.feature-desc{
+   flex-direction: column;
+   align-items: flex-start;
+}
+
+/* 55.00 */
