--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ ul{
     max-width: 1180px;
     margin-inline: auto;
     padding-inline: var(--padding-inline-section);
+    overflow: hidden;
 }
 
 .flex{
@@ -88,6 +89,7 @@ ul{
     padding: 12px 24px;
     box-shadow: 0 0 2px var(--secondary-text-color);
     transition: 0.2s ease-out;
+    text-align: center;
 }
 
 
@@ -125,6 +127,7 @@ ul{
 .main-nav{
     margin-top: 20px;
     justify-content: space-between;
+    position: relative;
 }
 
 .company-logo img{
@@ -140,6 +143,9 @@ ul{
   gap: 40px;
 }
 
+.nav-toggle{
+    display: none;
+}
 
 /* header section */
 
@@ -165,7 +171,7 @@ ul{
 }
 
 .header-right img{
-    width: 600px;
+    width: 100%;
 }
 
 
@@ -178,8 +184,9 @@ ul{
 }
 
 .logos{
-   justify-content: space-between;
+   justify-content: space-evenly;
    flex-wrap: wrap;
+   gap:20px;
 }
 
 .logo{
@@ -195,6 +202,7 @@ ul{
 
 .features-header{
     text-align: center;
+    margin-bottom: 40px;
 }
 
 .features-header h2{
@@ -204,14 +212,14 @@ ul{
 .features-area{
    flex-wrap: wrap;
    justify-content: space-between;
-   gap: 40px;
+   gap: 20px;
    margin-top:20px;
 }
 
 .features-card{
     flex-direction: column;
     gap:20px;
-    max-width: 30%;
+    max-width: 50%;
     text-align: center;
 }
 
@@ -232,22 +240,32 @@ ul{
    align-items: flex-start;
 }
 
+#second-big-feature{
+   flex-direction: row-reverse;
+}
+
 /* examples section*/
+.examples-section{
+   padding: 80px var(--padding-inline-section);
+}
+
 
 .examples-header{
     flex-direction: column;
     gap:20px;
+    text-align: center;
 }
 
 .examples-area{
     justify-content: space-between;
     margin-block: 30px;
+    flex-wrap: wrap;
 }
 
 .examples-card{
     width:23%;
     position: relative;
-    min-height: 300px;
+    height: 300px;
     background: black;
     background: linear-gradient(rgb(0,0,0,0.1),rgb(0,0,0,0.8)),url(./assets/asset\ 36.jpeg);
     background-size: cover;
@@ -292,6 +310,7 @@ ul{
     flex-direction: column;
     gap: 50px;
     color: white;
+    text-align: center;
 }
 
 .cta-section{
@@ -335,4 +354,7 @@ footer{
 .subfooter-container{
     justify-content: center;
     gap: 30px;
+    flex-wrap: wrap;
 }
+
+
